--- a/Terra-Tracker/Info.plist
+++ b/Terra-Tracker/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1IjoiaGlyb2tpLXdvcmtob3VzZSIsImEiOiJjajZxZW5rdDYwOTFoMndxcG15NXRtZW1jIn0.KWZylNWU3qDq5iHdVKLbEQ</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>このアプリは位置情報を取得します</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -56,7 +58,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSLocationWhenInUsageDescription</key>
-	<string>Location is required so that you can move and discover diamonds.</string>
+	<string>Shows your location on the map and helps improve the map.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
